Revert "Pass `MaxPermSize` for memory as well"
This reverts commit c7a18aef6d4cb15b612df2ffee89256357b4b4d2.